# ds-skills

./: .gitignore  CHANGELOG.md  README.md  README_CN.md  processed-competitions.txt  stats.json
.github/ISSUE_TEMPLATE/: config.yml  skill_request.yml  skill_request_cn.yml
cli/: README.md  pyproject.toml
cli/src/ds_skills_cli/: __init__.py  __main__.py  cli.py  client.py  config.py  output.py
graph/: skills-map.html
scripts/: skills-copy  skills-list
skills/cv/2d-to-3d-model-conversion/: SKILL.md
skills/cv/3d-center-crop-zero-pad/: SKILL.md
skills/cv/3d-encoder-2d-decoder-segmentation/: SKILL.md
skills/cv/3d-mixup-augmentation/: SKILL.md
skills/cv/3d-patch-sliding-window-inference/: SKILL.md
skills/cv/albumentations-detection-augmentation/: SKILL.md
skills/cv/anisotropic-spacing-trilinear-resample/: SKILL.md
skills/cv/arcface-metric-learning/: SKILL.md
skills/cv/attention-lstm-image-captioning/: SKILL.md
skills/cv/batch-all-contrastive-loss/: SKILL.md
skills/cv/bbox-augmentation-retry-loop/: SKILL.md
skills/cv/bbox-interpolation-temporal-tracking/: SKILL.md
skills/cv/bce-dice-combined-loss/: SKILL.md
skills/cv/bev-conv1-channel-expansion/: SKILL.md
skills/cv/bigru-slice-feature-aggregator/: SKILL.md
skills/cv/black-border-autocrop/: SKILL.md
skills/cv/black-slice-replacement/: SKILL.md
skills/cv/brovey-pansharpening/: SKILL.md
skills/cv/center-z-slice-selection/: SKILL.md
skills/cv/centroid-distance-anomaly-score/: SKILL.md
skills/cv/chunked-csv-image-generator/: SKILL.md
skills/cv/chunked-gpu-similarity-search/: SKILL.md
(+329 files in other folders)
