[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ds-skills-cli"
version = "0.2.0"
description = "Agent-friendly CLI to browse, search, and pull data science skills from ds-skills.com"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "wenmin-wu", email = "wuwenmin1991@gmail.com" }]
keywords = ["kaggle", "data-science", "skills", "cli", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://ds-skills.com"
Repository = "https://github.com/wenmin-wu/ds-skills"
Issues = "https://github.com/wenmin-wu/ds-skills/issues"

[project.scripts]
ds-skills = "ds_skills_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ds_skills_cli"]
